@@ -1,3 +1,11 @@
+2015-01-17  David Kilzer  <ddkilzer@apple.com>
+
+        Attempt to fix webkitpy tests on GTK Linux ports
+
+        * Scripts/webkitpy/port/ios.py:
+        (IOSPort.determine_full_port_name): Set a sensible default if
+        not running on a Mac platform or if no iOS SDK is installed.
+
 2015-01-17  Jake Nielsen  <jacob_nielsen@apple.com>
 
         Create iOS-EWS client queue
